Explicitly set transaction width to make it always consistent with "AddTransactionButton". This prevents undesireable, awkward shifting of transactions in the transaction table when the user adds or removes transactions.

--- a/src/App.css
+++ b/src/App.css
@@ -91,7 +91,7 @@ div.Transaction {
   background-color: #BBBBAA;
   background-color: #cccccc;
   height: 180px;
-
+  width: 270px;
 }
 
 div.ProfitData {
